<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ResultadoBuscarInspeccionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nueva_inspeccion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="INSP0023"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/et_matricula"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:text="R0000AAA"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_inspector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="INSPECTOR" />

                <TextView
                    android:id="@+id/et_inspector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="end"
                    android:text="JOSÉ LÓPEZ" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fechacalibracion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:inputType="date"
                    android:text="Fecha calibración" />

                <TextView
                    android:id="@+id/fechacalibracioncisterna"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:hint="01/01/2004" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fechaarnes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:inputType="date"
                    android:text="Fecha arnés" />

                <TextView
                    android:id="@+id/et_fechaarnes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:hint="01/01/2019" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/extintor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/extintor">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/aseo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/aseo">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/pertiga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/pertiga">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/baliza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/baliza">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/neumatica_delantero_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/neumatico_delantero_d">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/neumatico_delantero_i"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/neumatico_delantero_i">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/neumatico_trasero_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/neumatico_trasero_d">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/neumatico_trasero_i"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/neumatico_trasero_i">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/transpondercisterna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/transponderc">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_apagallamas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/apagallamas">

                </androidx.appcompat.widget.AppCompatCheckBox>


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_scully"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/scully">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_manguera_gases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/recvap">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_instalacionsimacok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/instalacionsimacok">

                </androidx.appcompat.widget.AppCompatCheckBox>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/observaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/observaciones"
                    android:text="Observaciones"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/observacionesok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="Revisión OK" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:src="@mipmap/bocas"/>

                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:src="@mipmap/camion1"/>

                <ImageView
                    android:id="@+id/iv3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:src="@mipmap/truck"/>

            </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>